@@ -60,7 +60,9 @@ RCPP_MODULE(vam_module) {
 	.method("get_params",&BayesianVam::get_params,"get params")
 	.method("set_params",&BayesianVam::set_params,"set params")
 	.method("set_sigma",&BayesianVam::set_sigma_at,"set sigma")
+  .method("set_proposal",&BayesianVam::set_proposal_at,"set proposal")
 	.method("get_sigma",&BayesianVam::get_sigma,"get sigma")
+  .method("get_proposal",&BayesianVam::get_proposal,"get proposal")
 	.method("get_prior_params",&BayesianVam::get_prior_params,"get prior params")
 	.method("get_virtual_age_infos",&BayesianVam::get_virtual_age_infos,"get infos related to virtual ages")
 	.method("get_data",&BayesianVam::get_selected_data,"get (selected) data")
