@@ -1,4 +1,6 @@
 VAM 3.5:
+  * ajout log-normal prior
+  * possibilité d'avoir une distribution instrumentale normale ou log-normale dans le MCMC
 	* possibilité de fixer la valeur de certain paramètre dans VAM bayésien
 	* help des fonctions VAM bayésien
 	* debug prior loi normale
